[package]
name = "pesona-be"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Configuration & Logging ---
config = { version = "0.15.13", features = ["yaml"] }

# --- Serialization ---
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# --- Security ---
thiserror = "2.0.12"
