[package]
name = "pesona-be"
version = "0.1.0"
edition = "2024"
description = "Pesona Backend"
license = "MIT"
repository = "https://github.com/dedystyawan/pesona-be"
readme = "README.md"

# -----------------------------------------------------------------------------
# Workspace Members
# -----------------------------------------------------------------------------
[workspace]
members = ["crates/app-core", "crates/health", "."]

# -----------------------------------------------------------------------------
# Workspace Shared Dependencies
# -----------------------------------------------------------------------------
[workspace.dependencies]
# --- Web & API ---
axum = { version = "0.8.4", features = ["multipart"] }
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-cookies = { version = "0.11.0", features = ["private"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "decompression-full", "trace", "timeout"] }

# --- Configuration & Logging ---
config = { version = "0.15.13", features = ["yaml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "chrono"] }

# --- Serialization ---
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# --- Database & Persistence ---
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }

# --- Security ---
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }

# --- Asynchronous Runtime & Concurrency ---
tokio = { version = "1.47.1", features = ["full"] }

# local
app-core = { path = "crates/app-core" }
health = { path = "crates/health" }

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# Local packages
app-core = { workspace = true }
health = { workspace = true }
# third party
axum = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
config ={ workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror ={ workspace = true}
validator={ workspace = true}
tokio = { workspace = true }
